fix #2328 Handle safety flow through instanceof pattern matching (#2331)
Handle safety flow through instanceof pattern matching